[package]
name = "diff2html"
description = "Pretty diff to html Rust library (diff2html) https://diff2html.xyz"
license = "MIT"
version = "0.2.1"
authors = ["Brett Girton <enzi@fuzo.us>"]

repository = "https://github.com/enzious/diff2html"
homepage = "https://diff2html.xyz"

edition = "2018"
exclude = [
    "test_files/*",
]

[dependencies]
difference = "2.0.0"
encoding_rs_io = "0.1.6"
handlebars = "1.1.0"
lazy_static = "1.3.0"
regex = "1.1.5"
seahash = "3.0.6"
serde = { version = "1.0.90", features = ["derive"] }
serde_json = "1.0.39"
clap = "2.33.0"
v_htmlescape = "0.4.3"