[package]
name = "diff2html"
description = "Pretty diff to html Rust library (diff2html) https://diff2html.xyz"
license = "MIT"
version = "0.2.3"
authors = ["Brett Girton <enzi@fuzo.us>"]

homepage = "https://diff2html.xyz"
repository = "https://github.com/enzious/diff2html"
documentation = "https://docs.rs/diff2html"

edition = "2018"
exclude = [
    "test_files/*",
]

[lib]
name = "diff2html"
path = "src/lib.rs"

[[bin]]
name = "diff2html"
path = "src/main.rs"
doc = false

[dependencies]
difference = "2.0.0"
encoding_rs_io = "0.1.6"
handlebars = "1.1.0"
lazy_static = "1.3.0"
regex = "1.1.5"
seahash = "3.0.6"
serde = { version = "1.0.90", features = ["derive"] }
serde_json = "1.0.39"
clap = "2.33.0"
v_htmlescape = "0.4.3"